force-app/main/default/objects/Integration_Setting__mdt/Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for API integrations</description>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>