force-app/main/default/objects/Integration_Setting__mdt/fields/Refresh_Token_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Refresh Token Enabled</label>
    <type>Checkbox</type>
</CustomField>