force-app/main/default/objects/Integration_Setting__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Timeout (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>