force-app/main/default/objects/Integration_Setting__mdt/fields/Token_Expiry_Hours__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry_Hours__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Token Expiry Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>